--- a/Record/SideTableViewCell.xib
+++ b/Record/SideTableViewCell.xib
@@ -11,14 +11,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" restorationIdentifier="SideCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="SideCell" rowHeight="80" id="KGk-i7-Jjw" customClass="SideTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="290" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="235" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="290" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="235" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xeq-Eu-nE8">
+                        <rect key="frame" x="96" y="29" width="42" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aku-3s-k3Y">
-                        <rect key="frame" x="4" y="4" width="278" height="72"/>
+                        <rect key="frame" x="4" y="4" width="227" height="72"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FzY-cK-QUh">
@@ -31,6 +38,7 @@
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8lN-e1-Jbi">
                         <rect key="frame" x="135" y="22" width="60" height="34"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <state key="normal" title="update"/>
                         <connections>
                             <action selector="updateButtonClick:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="jzo-2N-no2"/>
@@ -39,11 +47,12 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="lableForNumber" destination="xeq-Eu-nE8" id="T5W-fX-B9t"/>
                 <outlet property="myImageView" destination="Aku-3s-k3Y" id="uHS-M0-pZR"/>
                 <outlet property="myLabel" destination="FzY-cK-QUh" id="GC1-bR-LkJ"/>
                 <outlet property="updataButton" destination="8lN-e1-Jbi" id="xeZ-HM-H1L"/>
             </connections>
-            <point key="canvasLocation" x="-109" y="-16"/>
+            <point key="canvasLocation" x="-136.5" y="-16"/>
         </tableViewCell>
     </objects>
 </document>
